--- a/src/components/admin/theme.css
+++ b/src/components/admin/theme.css
@@ -4,11 +4,14 @@
   --theme-text: #1f2937; 
   --sidebar-bg: #ffffff; /* bg-gray-100 */
   --sidebar-text: #1f2937; /* text-gray-800 */
-  --sidebar-hover: #e0e7ff; /* hover:bg-indigo-50 */
-  --active-bg: #e0e7ff; /* bg-indigo-100 */
+  --sidebar-hover: #c7deff; /* hover:bg-indigo-50 */
+  --active-bg: #c7deff; /* bg-indigo-100 */
   --button-bg: #e5e7eb; /* bg-gray-200 */
   --button-text: #374151; /* text-gray-700 */
   --button-hover: #d1d5db; /* hover:bg-gray-300 */
+  --dropdown-hover: #c7deff; /* hover:bg-indigo-50 */
+  --table-bg: #ffffff; 
+  --table-thead-bg: linear-gradient(to right, #34c1fd, #0bdac2);
 }
 
 /* Dark Mode */
@@ -22,6 +25,9 @@
   --button-bg: #374151; /* bg-gray-800 */
   --button-text: #ffffff; /* text-white */
   --button-hover: #4b5563; /* hover:bg-gray-600 */
+  --dropdown-hover: #374151;
+  --table-bg: #ffffff34; 
+  --table-thead-bg: linear-gradient(to right, #3481fd, #14b8a6);
 }
 
 /* ใช้ตัวแปรสำหรับทุกอย่าง */
@@ -61,4 +67,35 @@
 .sidebar-item.collapsed {
   justify-content: center;
   padding: 8px;
+}
+
+.dropdown-menu {
+  background-color: var(--theme-bg);
+  color: var(--theme-text);
+  border-radius: 15px;
+} 
+
+.dropdown-item {
+  background-color: var(--theme-bg);
+  color: var(--theme-text);
+  border-radius: 15px;
+}
+
+.dropdown-item:hover {
+  background-color: var(--dropdown-hover);
+  border-radius: 15px;
+}
+
+.table-theme {
+  background-color: var(--table-bg);
+}
+
+.table-thead {
+  background-image: var(--table-thead-bg);
+  color: white;
+}
+
+.pagination-bg {
+  background-image: var(--table-thead-bg);
+  color: white;
 }
